:sparkles: 型情報を定義する

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "Lua.diagnostics.globals": [
         "call_go_double",
         "call_go_calculate",
-        "call_go_set_image"
+        "call_go_set_image",
+        "call_go_display_image"
     ],
     "Lua.diagnostics.disable": [
         "unused-function"
